--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,42 +1,170 @@
-.content-mainTable{
-    width: 100%;
-    height: auto;
-}
-
-.content-searchBar{
-    width: 100%;
-    height: 8vh;
-}
-
-.w-40rem{
-    width: 40rem;
-}
-
-.fs-80em{
-    font-size: 0.80em;
-}
-
-.fs-70em{
-    font-size: 0.70em;
-}
-
-.cs{
-    position: absolute;
-    left: 3.5rem;
-    width: 16.5rem;
-    height: 10rem;
-    background-color: #f9f9f9;
-    border: 1px solid #000;
-}
-
-.none{
-    display: none;
-}
-
-.block{
-    display: block;
-}
-
-.form{
-    width: 100%;
+.content-mainTable{
+
+    width: 100%;
+
+    height: auto;
+
+}
+
+
+
+.content-searchBar{
+
+    width: 100%;
+
+    height: 8vh;
+
+}
+
+
+
+.w-40rem{
+
+    width: 40rem;
+
+}
+
+
+
+.fs-80em{
+
+    font-size: 0.80em;
+
+}
+
+
+
+.fs-70em{
+
+    font-size: 0.70em;
+
+}
+
+
+
+.cs{
+
+    position: absolute;
+
+    left: 3.5rem;
+
+    width: 16.5rem;
+
+    height: 10rem;
+
+    background-color: #f9f9f9;
+
+    border: 1px solid #000;
+
+}
+
+
+
+.none{
+
+    display: none;
+
+}
+
+
+
+.block{
+
+    display: block;
+
+}
+
+
+
+.form{
+
+    width: 100%;
+
+}
+
+.h-air{
+    float: left;
+    width: 100%;
+    height: 9mm;
+    background-color: rgb(58, 57, 57);
+    color: #fff;
+    text-align: center;
+    padding-top: 1mm;
+}
+
+.b-air{
+    float: left;
+}
+
+.c-hAir{
+    float: left;
+    width: 20mm;
+}
+
+.hAir{
+    float: left;
+    width: 100%;
+    background-color: rgb(97, 96, 96);
+    text-align: center;
+    color: #fff;
+    font-weight: bold;
+}
+
+.bAir{
+    float: left;
+    width: 100%;
+    text-align: center;
+    font-weight: bold;
+    font-size: 12px;
+    background-color: rgb(223, 222, 222);
+}
+
+.h-maritime{
+    float: left;
+    width: 100%;
+    height: 9mm;
+    background-color: rgb(58, 57, 57);
+    color: #fff;
+    text-align: center;
+    padding-top: 1mm;
+}
+
+.b-maritime{
+    float: left;
+    width: 100%;
+}
+
+.c-hMaritime{
+    float: left;
+    width: 20mm;
+}
+
+.hMaritime{
+    float: left;
+    width: 100%;
+    background-color: rgb(97, 96, 96);
+    text-align: center;
+    color: #fff;
+    font-weight: bold;
+}
+
+.bMaritime{
+    float: left;
+    width: 100%;
+    text-align: center;
+    font-weight: bold;
+    font-size: 12px;
+    background-color: rgb(223, 222, 222);
+}
+
+.content-rates{
+    float: left;
+    width: 100%;
+    overflow-x: scroll;
+}
+
+.subContent-rates{
+    float: left;
+    width: auto;
+    min-width: 100%;
 }
